--- a/app-client/mt-client-sample/package.json
+++ b/app-client/mt-client-sample/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy-s3": "serverless client deploy"
   },
   "dependencies": {
     "@types/graphql": "^14.0.7",
@@ -14,8 +15,10 @@
     "apollo-link": "^1.2.11",
     "apollo-link-context": "^1.0.17",
     "apollo-link-http": "^1.5.14",
+    "axios": "^0.18.0",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "serverless-finch": "^2.4.2",
     "vue": "^2.6.6",
     "vue-apollo": "^3.0.0-beta.28",
     "vue-class-component": "^6.0.0",
